ajustando CSS de projetos completos

--- a/professores/templates/professores/banca_avaliar.html
+++ b/professores/templates/professores/banca_avaliar.html
@@ -156,7 +156,7 @@
             <span lang="pt">Orientações Gerais</span>
             <span lang="en">Guidelines</span>
           </h5>
-          <p style="text-align: justify;">
+          <p class="texto-alinhado">
             <span lang="pt">{{composicao.orientacoes|safe}}</span>
             <span lang="en">{{composicao.orientacoes_en|safe}}</span>
           </p>
