--- a/templates/info.html
+++ b/templates/info.html
@@ -12,10 +12,6 @@
       border-radius: 8px;
       padding: 16px;
     }
-    p {
-      text-align: justify;
-      margin-bottom: 0.8rem;
-    }
   </style>
 {% endblock %}
 
@@ -24,7 +20,7 @@
   <div class="container-fluid" style="max-width:740px; padding-left: 6px; padding-right: 6px;">
     <div class="row justify-content-around">
       <div class="col-xl-auto" style="margin-bottom: 18px;">
-        <div class="quad_pfe">
+        <div class="quad_pfe texto-alinhado">
           <h2>Capstone</h2>
           <br>
           <span lang="pt">{{info.texto|safe}}</span>
