criada uma tabela padrão

--- a/estudantes/templates/estudantes/alocacao_semanal.html
+++ b/estudantes/templates/estudantes/alocacao_semanal.html
@@ -6,6 +6,7 @@
 {% endcomment %}
 
 {% block head %}
+  <link rel="stylesheet" href="{% static 'css/mostra_horarios.css' %}">
 {% endblock %}
 
 {% block content %}
