--- a/administracao/templates/administracao/cadastra_disciplina.html
+++ b/administracao/templates/administracao/cadastra_disciplina.html
@@ -7,29 +7,22 @@
 
 {% block head %}
   {% load static %}
-  {% load get_field %} \
-  <style>  
-    thead {background-color: #BEE5EB;}
-    table {margin-top: 10px;}
-    th, td {padding: 1px 5px 1px 5px;}
-  </style>
+  {% load get_field %}
 {% endblock %}
 
 {% block content %}
-
-  <br>
 
   <form method="post" id="disciplinaform" enctype="multipart/form-data"> {% csrf_token %}
     
     <label for="nome">
       <span lang="pt">Nome da Disciplina:</span>
-      <span lang="en">Course Name:</span>
+      <span lang="en" style="display: none;">Course Name:</span>
     </label> <input type="text" size="48" style="display: block;"
            maxlength="{% max_length Disciplina 'nome' %}" id="nome" name="nome" required>
 
     <button class="btn btn-primary mb-1 mt-2" type="submit">
       <span lang="pt">Cadastrar Disciplina</span>
-      <span lang="en">Register Course</span>
+      <span lang="en" style="display: none;">Register Course</span>
     </button>
     
     <br>
@@ -43,10 +36,10 @@
     {% endif %}
     <br>
 
-    <table id="disciplinas">
+    <table id="disciplinas" class="tabela-padrao">
       <thead><tr><th>
         <span lang="pt">Disciplinas Cadastradas</span>
-        <span lang="en">Registered Courses</span>
+        <span lang="en" style="display: none;">Registered Courses</span>
       </th></tr></thead>
       <tbody>
       {% for disciplina in disciplinas %}
