--- a/projetos/static/css/style.css
+++ b/projetos/static/css/style.css
@@ -19,6 +19,37 @@ ul, ol {
   margin-right: 0;
 } */
 
+.tabela-padrao {
+  max-width:100%;
+}
+
+.tabela-padrao thead {
+  background-color: #bee5eb;
+  text-align: center;
+  /* cursor: pointer; */
+}
+
+.tabela-padrao thead tr,
+.tabela-padrao th {
+  border: 1px solid #85cfda;
+}
+
+.tabela-padrao td {
+  padding: 1px 4px 1px 4px;
+  border: 1px solid #ddd;
+}
+
+
+/*
+VAI QUE PRECISA
+tbody tr:nth-child(even) {background-color: #f2f2f2;}
+tbody tr:nth-child(odd) {background-color: #f9f9f9;} */
+
+.apontavel {
+  cursor: pointer;
+}
+
+
 
 /* Para esconder e mostrar elementos */
 .hidden {display: none;}
