--- a/templates/edicoes.html
+++ b/templates/edicoes.html
@@ -15,14 +15,14 @@
     @media only screen and (max-width: 575.98px) {
       .to_hide {
         font-size: 0.7rem;
-        min-width:22%;
-        max-width:fit-content;
-        width:2.2rem;
+        min-width: 22%;
+        max-width: fit-content;
+        width: 2.2rem;
       }
       .to_hide2 {
         font-size: 0.7rem;
-        min-width:60%;
-        max-width:70%;
+        min-width: 60%;
+        max-width: 70%;
       }
       .to_label {
         padding: 0px 14px 0px 4px !important;
@@ -46,9 +46,15 @@
       background-size: 400% 100%;
     }
 
+    #container_edicao {
+      margin-left: 0px;
+      padding-left: 0px;
+      margin-bottom: 0.75rem;
+    }
+
   </style>
 
-  <div id="container_edicao" class="container" style="margin-left: 0px; padding-left: 0px;">
+  <div id="container_edicao" class="container">
   <div class="row align-items-start justify-content-start mb-1">
     <div class="ml-3 form-inline">
       {% comment %} <div class="input-group input-group-sm"> {% endcomment %}
