--- a/documentos/templates/documentos/contratos_assinados.html
+++ b/documentos/templates/documentos/contratos_assinados.html
@@ -13,143 +13,136 @@
 
 {% block content %}
 
-  {% include "edicoes.html" %}
-  <br>
+  {% include "edicoes.html" %}<br>
   
   <div class="atualizar">
-
     {% include "tabelas_top_ml.html" with tabela="Contratos" cabecalhos=cabecalhos %}
-    
-          {% for projeto in projetos %} 
-            <tr class="item">
+      {% for projeto in projetos %} 
+        <tr class="item">
 
-              <td> <!-- Organização -->
-                {% if projeto and projeto.organizacao %}
-                  <a class="imprimir" href="{% url 'organizacao_completo' projeto.organizacao.id %}">{{ projeto.organizacao.sigla }}</a>
-                {% else %}
-                  ORGANIZAÇÃO NÃO DEFINIDA
+          <td> <!-- Organização -->
+            {% if projeto and projeto.organizacao %}
+              <a class="imprimir" href="{% url 'organizacao_completo' projeto.organizacao.id %}">{{ projeto.organizacao.sigla }}</a>
+            {% else %}
+              ORGANIZAÇÃO NÃO DEFINIDA
+            {% endif %}
+          </td>
+          
+          <td> <!-- Projeto -->
+            <a style="font-size: 0.9em;" class="imprimir" href="{% url 'projeto_completo' projeto.id %}">
+              {% if projeto.titulo_final and projeto.titulo_final != projeto.proposta.titulo %}
+                {{projeto.titulo_final}}
+                <span class="tit_ori">
+                  <br><small>Título original da proposta: {{projeto.proposta.titulo}}</small>
+                </span>
+              {% else %}
+                {{projeto.get_titulo}}
+              {% endif %}
+              {% include "tipo_projeto.html" %}
+            </a>
+          </td>
+          
+          <!-- Conexões -->
+          <td style="min-width:18em;">
+            <small>
+            <ul style="padding-left: 20px;margin-bottom: 0px;">
+              {% for conexao in projeto.conexao_set.all %}
+                <li>
+                  <a class="imprimir" href="{% url 'parceiro_detail' conexao.parceiro.id %}">{{ conexao.parceiro.user.get_full_name }}</a>
+                  {% for papel in conexao.get_papeis %}[{{papel.0}}] {% endfor %}
+                </li>
+              {% endfor %}
+            </ul>
+            </small>
+          </td>
+
+          <!-- Estudantes -->
+          <td style="min-width:18em;">
+            <small>
+            <ul class="grupo" style="padding-left: 20px;margin-bottom: 0px;">
+              {% for alocacao in projeto.alocacao_set.all %}
+                <li>
+                  <a class="imprimir" href="{% url 'estudante_detail' alocacao.aluno.id %}">{{alocacao.aluno}}</a>
+                  <span class="curso">[{{ alocacao.aluno.curso2 }}]</span>
+                </li>
+              {% endfor %}
+            </ul>
+            </small>
+          </td>
+
+          <!-- Orientador -->
+          <td>
+            <small>
+              {% if projeto.orientador %}
+                <a class="imprimir" href="{% url 'professor_detail' projeto.orientador.id %}">{{ projeto.orientador }}</a>
+              {% else %}
+                ORIENTADOR NÃO DEFINIDO
+              {% endif %}
+
+              {% with coorientadores=projeto.coorientador_set.all %}
+                {% if coorientadores %}
+                <span class="coorientadores">
+                <br>coorientação:
+                  {% for coorientador in coorientadores %}
+                      <a class="imprimir" href="{% url 'user_detail' coorientador.usuario.id %}">{{coorientador.usuario.get_full_name}}</a>
+                      {% comment %} <a class="email" href="mailto:{{coorientador.usuario.email}}">&lt;{{coorientador.usuario.email}}&gt;</a> {% endcomment %}
+                      {% if not forloop.last %}; {% endif %}
+                  {% endfor %}
+                  </span>
                 {% endif %}
-              </td>
-              
-              <td> <!-- Projeto -->
-                <a style="font-size: 0.9em;" class="imprimir" href="{% url 'projeto_completo' projeto.id %}">
-                  {% if projeto.titulo_final and projeto.titulo_final != projeto.proposta.titulo %}
-                    {{projeto.titulo_final}}
-                    <span class="tit_ori">
-                      <br><small>Título original da proposta: {{projeto.proposta.titulo}}</small>
-                    </span>
-                  {% else %}
-                    {{projeto.get_titulo}}
+              {% endwith %}
+            </small>
+          </td>
+
+          <!-- Período -->
+          <td style="text-align:center">
+              {{projeto.ano}}.{{projeto.semestre}}
+          </td>
+
+          <!-- Contrato(s) -->
+          <td style="text-align:center; vertical-align: middle; position:relative;">
+            <small class="esconder" style="position:absolute; top:0; left:0; cursor:pointer;">
+              <a
+                class="open-documento"
+                data-url="{% url 'adiciona_documento' projeto.organizacao.id projeto.id 'COP' %}"
+                >&#10133;</a>
+            </small>
+
+            {% for documento in projeto.documento_set.all|tipo_documentos:1 %}
+
+              {% if documento.documento and documento.link %}
+                <div class="btn btn-light btn-outline-info btn-sm" style="width: 7em; padding:0px 4px 0px 4px;">
+                  Contrato
+                  <a href="{{request.scheme}}://{{request.get_host}}{{documento.documento.url}}" target="_blank" rel="noopener noreferrer">(documento)</a>
+                  <a href="{{documento.link}}" target="_blank" rel="noopener noreferrer">(link)</a>
+                  {% if documento.lingua_do_documento == 1 %} {% comment %} Inglês {% endcomment %}
+                    <sup>(Inglês)</sup>
                   {% endif %}
-                  {% include "tipo_projeto.html" %}
-                </a>
-              </td>
-              
-              <!-- Conexões -->
-              <td style="min-width:18em;">
-                <small>
-                <ul style="padding-left: 20px;margin-bottom: 0px;">
-                  {% for conexao in projeto.conexao_set.all %}
-                    <li>
-                      <a class="imprimir" href="{% url 'parceiro_detail' conexao.parceiro.id %}">{{ conexao.parceiro.user.get_full_name }}</a>
-                      {% for papel in conexao.get_papeis %}[{{papel.0}}] {% endfor %}
-                    </li>
-                  {% endfor %}
-                </ul>
-                </small>
-              </td>
-
-              <!-- Estudantes -->
-              <td style="min-width:18em;">
-                <small>
-                <ul class="grupo" style="padding-left: 20px;margin-bottom: 0px;">
-                  {% for alocacao in projeto.alocacao_set.all %}
-                    <li>
-                      <a class="imprimir" href="{% url 'estudante_detail' alocacao.aluno.id %}">{{alocacao.aluno}}</a>
-                      <span class="curso">[{{ alocacao.aluno.curso2 }}]</span>
-                    </li>
-                  {% endfor %}
-                </ul>
-                </small>
-              </td>
-
-              <!-- Orientador -->
-              <td>
-                <small>
-                  {% if projeto.orientador %}
-                    <a class="imprimir" href="{% url 'professor_detail' projeto.orientador.id %}">{{ projeto.orientador }}</a>
-                  {% else %}
-                    ORIENTADOR NÃO DEFINIDO
+                </div>
+              {% else %}
+                {% if documento.documento %}
+                  <a class="btn btn-light btn-outline-info btn-sm" style="width: 7em; padding:0px 4px 0px 4px;" 
+                    href="{{request.scheme}}://{{request.get_host}}{{documento.documento.url}}" target="_blank" rel="noopener noreferrer">Contrato</a>
+                  {% if documento.lingua_do_documento == 1 %} {% comment %} Inglês {% endcomment %}
+                    <sup>(Inglês)</sup>
                   {% endif %}
-
-                  {% with coorientadores=projeto.coorientador_set.all %}
-                    {% if coorientadores %}
-                    <span class="coorientadores">
-                    <br>coorientação:
-                      {% for coorientador in coorientadores %}
-                          <a class="imprimir" href="{% url 'user_detail' coorientador.usuario.id %}">{{coorientador.usuario.get_full_name}}</a>
-                          {% comment %} <a class="email" href="mailto:{{coorientador.usuario.email}}">&lt;{{coorientador.usuario.email}}&gt;</a> {% endcomment %}
-                          {% if not forloop.last %}; {% endif %}
-                      {% endfor %}
-                      </span>
-                    {% endif %}
-                  {% endwith %}
-                </small>
-              </td>
-
-              <!-- Período -->
-              <td style="text-align:center">
-                  {{projeto.ano}}.{{projeto.semestre}}
-              </td>
-
-              <!-- Contrato(s) -->
-              <td style="text-align:center; vertical-align: middle; position:relative;">
-                <small class="esconder" style="position:absolute; top:0; left:0; cursor:pointer;">
-                  <a
-                    class="open-documento"
-                    data-url="{% url 'adiciona_documento' projeto.organizacao.id projeto.id 'COP' %}"
-                    >&#10133;</a>
-                </small>
-
-                {% for documento in projeto.documento_set.all|tipo_documentos:1 %}
-
-                  {% if documento.documento and documento.link %}
-                    <div class="btn btn-light btn-outline-info btn-sm" style="width: 7em; padding:0px 4px 0px 4px;">
-                      Contrato
-                      <a href="{{request.scheme}}://{{request.get_host}}{{documento.documento.url}}" target="_blank" rel="noopener noreferrer">(documento)</a>
-                      <a href="{{documento.link}}" target="_blank" rel="noopener noreferrer">(link)</a>
-                      {% if documento.lingua_do_documento == 1 %} {% comment %} Inglês {% endcomment %}
-                        <sup>(Inglês)</sup>
-                      {% endif %}
-                    </div>
-                  {% else %}
-                    {% if documento.documento %}
-                      <a class="btn btn-light btn-outline-info btn-sm" style="width: 7em; padding:0px 4px 0px 4px;" 
-                        href="{{request.scheme}}://{{request.get_host}}{{documento.documento.url}}" target="_blank" rel="noopener noreferrer">Contrato</a>
-                      {% if documento.lingua_do_documento == 1 %} {% comment %} Inglês {% endcomment %}
-                        <sup>(Inglês)</sup>
-                      {% endif %}
-                    {% endif %}
-                    {% if documento.link %}
-                      <a class="btn btn-light btn-outline-info btn-sm" style="width: 7em; padding:0px 4px 0px 4px;"
-                         href="{{documento.link}}" target="_blank" rel="noopener noreferrer">Contrato</a>
-                      {% if documento.lingua_do_documento == 1 %} {% comment %} Inglês {% endcomment %}
-                        <sup>(Inglês)</sup>
-                      {% endif %}
-                    {% endif %}
+                {% endif %}
+                {% if documento.link %}
+                  <a class="btn btn-light btn-outline-info btn-sm" style="width: 7em; padding:0px 4px 0px 4px;"
+                      href="{{documento.link}}" target="_blank" rel="noopener noreferrer">Contrato</a>
+                  {% if documento.lingua_do_documento == 1 %} {% comment %} Inglês {% endcomment %}
+                    <sup>(Inglês)</sup>
                   {% endif %}
+                {% endif %}
+              {% endif %}
 
-                {% empty %}
-                  <span class="btn btn-danger btn-sm">Contrato<br>Pendente</span>
-                {% endfor %}
-              </td>
-            </tr>
-          {% endfor %}
-        </tbody>
-      </table>
-
-    </div>
-
+            {% empty %}
+              <span class="btn btn-danger btn-sm">Contrato<br>Pendente</span>
+            {% endfor %}
+          </td>
+        </tr>
+      {% endfor %}
+    {% include "tabelas_bottom.html" %}
   </div>
 
   <script>
