--- a/professores/templates/professores/dinamicas_view.html
+++ b/professores/templates/professores/dinamicas_view.html
@@ -4,276 +4,275 @@
   Data: 14 de Dezembro de 2023
 {% endcomment %}
 
-  {% load static %}
+{% load static %}
 
-  <link rel="stylesheet" href="{% static 'bootstrap-select-1.13.14/dist/css/bootstrap-select.min.css' %}">
-  <script src="{% static 'bootstrap-select-1.13.14/dist/js/bootstrap-select.min.js' %}"></script>
+<link rel="stylesheet" href="{% static 'bootstrap-select-1.13.14/dist/css/bootstrap-select.min.css' %}">
+<script src="{% static 'bootstrap-select-1.13.14/dist/js/bootstrap-select.min.js' %}"></script>
 
-  <link rel='stylesheet' href="{% static 'bootstrap-datepicker/dist/css/bootstrap-datepicker.standalone.min.css' %}" crossorigin="anonymous">
-  <script src="{% static 'bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js' %}"></script> 
-  <script src="{% static 'bootstrap-datepicker/dist/locales/bootstrap-datepicker.pt-BR.min.js' %}"></script> 
+<link rel='stylesheet' href="{% static 'bootstrap-datepicker/dist/css/bootstrap-datepicker.standalone.min.css' %}" crossorigin="anonymous">
+<script src="{% static 'bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js' %}"></script> 
+<script src="{% static 'bootstrap-datepicker/dist/locales/bootstrap-datepicker.pt-BR.min.js' %}"></script> 
 
-  <style>
-    table, th, td {border: 0px;}
-    {% comment %} Para seleção de projeto não vazar a tela {% endcomment %}
-    .bootstrap-select > .dropdown-menu { 
-      width: 100vw;
-      max-width: fit-content;
-    }
-  </style>
+<style>
+  table, th, td {border: 0px;}
+  {% comment %} Para seleção de projeto não vazar a tela {% endcomment %}
+  .bootstrap-select > .dropdown-menu { 
+    width: 100vw;
+    max-width: fit-content;
+  }
+</style>
 
-    <form id="dinamicasform" method="post" enctype="multipart/form-data">
-      {% csrf_token %}
+  <form id="dinamicasform" method="post" enctype="multipart/form-data">{% csrf_token %}
 
-      <div class="modal-header">
-        <h5 id="documentacao" class="modal-title">{% if encontro %}Editar Agendamento de{% else %}Agendar{% endif %} Mentoria</h5>    
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-    
-      <div id="modal-body" class="modal-body">
-
-      {% comment %} Se livrar do datetime-local, ele não funciona bem {% endcomment %}
-      <div class="container">   
-          <label for="inicio" style="margin-right: 2rem;">
-          <span style="display:inline-block; width:5.5ex; text-align:right;">Inicio:</span>
-          <input id="inicio"  type="datetime-local" name="inicio"
-          {% if encontro %}
-            value="{{encontro.startDate|date:'Y-m-d\TH:i:s'}}" 
-          {% elif data %}
-            value="{{data}}T00:00"
-          {% endif %}
-          required>
-          </label>
-        
-          <label for="fim" style="margin-right: 2rem;">
-          <span style="display:inline-block; width:5.5ex; text-align:right">Fim:</span>
-          <input id="fim"  type="datetime-local" name="fim"
-          {% if encontro %}
-            value="{{encontro.endDate|date:'Y-m-d\TH:i:s'}}"
-          {% elif data %}
-            value="{{data}}T00:00"
-          {% endif %} 
-          required>
-          </label>
-
-          {% if not encontro %}
-          <label for="vezes" style="margin-right: 2rem;">
-            <span style="display:inline-block; width:5.5ex; text-align:right">Vezes:</span>
-            <input id="vezes" type="number" name="vezes" value="1" min="1" max="16" style="display:inline-block; width:2.7rem;" required>
-          </label>
-          {% endif %} 
-        
-      <script>
-        // https://webreflection.medium.com/using-the-input-datetime-local-9503e7efdce
-        Date.prototype.toDatetimeLocal =
-          function toDatetimeLocal() {
-            var
-              date = this,
-              ten = function (i) {
-                return (i < 10 ? '0' : '') + i;
-              },
-              YYYY = date.getFullYear(),
-              MM = ten(date.getMonth() + 1),
-              DD = ten(date.getDate()),
-              HH = ten(date.getHours()),
-              II = ten(date.getMinutes()),
-              SS = ten(date.getSeconds())
-            ;
-            return YYYY + '-' + MM + '-' + DD + 'T' +
-                    HH + ':' + II + ':' + SS;
-          };
-
-        var minutos = 20;
-
-        $("#inicio").change(function() {
-          var data = new Date($(this).val());
-          data.setMinutes(data.getMinutes() + minutos);
-          $("#fim").val(data.toDatetimeLocal());
-        });
-
-      </script>
-
-      <br><br>
-      <label for="local">Local / Vídeo-conferência:
-        <input id="local" name="local" type="text" size="36" style="width: 100%;" maxlength="280"
-        {% if encontro %}
-          value="{{encontro.location}}"
-        {% endif %} 
-        />
-      </label>
-      <br>
-
-      <br>
-      Facilitador:<br>
-      <select name="facilitador" class="pessoas selectpicker" id="facilitador" title="Selecione o facilitador"
-        data-live-search="true" data-width="90%" data-size="10">
-          <option {% if not encontro %}selected{% endif %} value="0"> -- selecione o facilitador -- </option>
-          <optgroup label="Professores">
-            {% for pessoa in professores %}
-              <option value="{{pessoa.id}}" {% if pessoa.id == encontro.facilitador.id %} selected {% endif %}>{{pessoa}}</option>
-            {% endfor %}
-          </optgroup>
-          <optgroup label="Falconi">
-            {% for pessoa in falconis %}
-              <option value="{{pessoa.id}}" {% if pessoa.id == encontro.facilitador.id %} selected {% endif %}>{{pessoa}}</option>
-            {% endfor %}
-          </optgroup>
-          {% comment %} <optgroup label="Outros">
-            {% for pessoa in pessoas %}
-              <option value="{{pessoa.id}}" {% if pessoa.id == encontro.facilitador.id %} selected {% endif %}>{{pessoa}}</option>
-            {% endfor %}
-          </optgroup> {% endcomment %}
-      </select>
-
-    </div>
-    
-    <div class="container">
-      
-      <br><hr><br>
-
-      <label for="projeto">Projeto:</label>
-      <select class="selectpicker" name="projeto" id="projeto" title="Selecione o projeto"
-       data-live-search="true" data-width="75%" data-size="10">
-        <option {% if not encontro %}selected{% endif %} value="0"> -- selecione um projeto -- </option>
-        {% for projeto in projetos %}
-          <option value="{{projeto.id}}"
-          style="font-size: 0.75em;"
-          data-titulo="{{projeto.get_titulo}}"
-          data-organizacao="{{projeto.organizacao}}"
-          data-orientador="{{projeto.orientador}}"
-          {% if projeto.id == encontro.projeto.id %} selected {% endif %}
-          data-subtext="{{projeto.orientador}}"
-          >
-            {{projeto.ano}}.{{projeto.semestre}}
-            ({{projeto.organizacao}})
-            {{projeto.get_titulo}}
-          </option>  
-        {% endfor %}
-      </select><br><br>
-
-      Título: <label id="titulo" name="titulo">
-        {% if encontro and encontro.projeto %}
-          {{encontro.projeto.get_titulo}}
-        {% else %}
-          Titulo de Projeto não definido
-        {% endif %}
-      </label><br>
-
-      Organização: <label id="organizacao" name="organizacao">
-        {% if encontro and encontro.projeto and encontro.projeto.organizacao %}
-          {{encontro.projeto.organizacao}}
-        {% else %}
-          Organização Parceira não definida
-        {% endif %}
-      </label><br>
-      
-      Orientador(a): <label id="orientador" name="orientador">
-        {% if encontro and encontro.projeto and encontro.projeto.orientador %}
-          {{encontro.projeto.orientador}}
-        {% else %}
-          Sem identificação de Orientador(a)
-        {% endif %}
-      </label><br>
-
-      </div>
-
-      <br><br>
-      <span id="mensagem"></span>
-
-    </div>
-
-    <div class="modal-footer">
-      <button id="fecha_modal" type="button" class="btn btn-secondary mb-1" data-dismiss="modal">Fechar</button>
-
-      <button id="submit" class="btn btn-primary mb-1" type="submit" name="atualizar"
-        {% if encontro %}onclick="operacao = 'atualizar';"{% endif %}>
-        {% if encontro %}Atualizar{% else %}Criar{% endif %}
+    <div class="modal-header">
+      <h5 id="documentacao" class="modal-title">{% if encontro %}Editar Agendamento de{% else %}Agendar{% endif %} Mentoria</h5>    
+      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
       </button>
+    </div>
+  
+    <div id="modal-body" class="modal-body">
+
+    {% comment %} Se livrar do datetime-local, ele não funciona bem {% endcomment %}
+    <div class="container">   
+        <label for="inicio" style="margin-right: 2rem;">
+        <span style="display:inline-block; width:5.5ex; text-align:right;">Inicio:</span>
+        <input id="inicio"  type="datetime-local" name="inicio"
+        {% if encontro %}
+          value="{{encontro.startDate|date:'Y-m-d\TH:i:s'}}" 
+        {% elif data %}
+          value="{{data}}T00:00"
+        {% endif %}
+        required>
+        </label>
+      
+        <label for="fim" style="margin-right: 2rem;">
+        <span style="display:inline-block; width:5.5ex; text-align:right">Fim:</span>
+        <input id="fim"  type="datetime-local" name="fim"
+        {% if encontro %}
+          value="{{encontro.endDate|date:'Y-m-d\TH:i:s'}}"
+        {% elif data %}
+          value="{{data}}T00:00"
+        {% endif %} 
+        required>
+        </label>
+
+        {% if not encontro %}
+        <label for="vezes" style="margin-right: 2rem;">
+          <span style="display:inline-block; width:5.5ex; text-align:right">Vezes:</span>
+          <input id="vezes" type="number" name="vezes" value="1" min="1" max="16" style="display:inline-block; width:2.7rem;" required>
+        </label>
+        {% endif %} 
+      
+    <script>
+      // https://webreflection.medium.com/using-the-input-datetime-local-9503e7efdce
+      Date.prototype.toDatetimeLocal =
+        function toDatetimeLocal() {
+          var
+            date = this,
+            ten = function (i) {
+              return (i < 10 ? '0' : '') + i;
+            },
+            YYYY = date.getFullYear(),
+            MM = ten(date.getMonth() + 1),
+            DD = ten(date.getDate()),
+            HH = ten(date.getHours()),
+            II = ten(date.getMinutes()),
+            SS = ten(date.getSeconds())
+          ;
+          return YYYY + '-' + MM + '-' + DD + 'T' +
+                  HH + ':' + II + ':' + SS;
+        };
+
+      var minutos = 20;
+
+      $("#inicio").change(function() {
+        var data = new Date($(this).val());
+        data.setMinutes(data.getMinutes() + minutos);
+        $("#fim").val(data.toDatetimeLocal());
+      });
+
+    </script>
+
+    <br><br>
+    <label for="local">Local / Vídeo-conferência:
+      <input id="local" name="local" type="text" size="36" style="width: 100%;" maxlength="280"
       {% if encontro %}
-        <button id="excluir" class="btn btn-primary mb-1" type="submit" name="excluir" onclick="operacao = 'excluir';">
-          Excluir Mentoria
-        </button>
+        value="{{encontro.location}}"
+      {% endif %} 
+      />
+    </label>
+    <br>
+
+    <br>
+    Facilitador:<br>
+    <select name="facilitador" class="pessoas selectpicker" id="facilitador" title="Selecione o facilitador"
+      data-live-search="true" data-width="90%" data-size="10">
+        <option {% if not encontro %}selected{% endif %} value="0"> -- selecione o facilitador -- </option>
+        <optgroup label="Professores">
+          {% for pessoa in professores %}
+            <option value="{{pessoa.id}}" {% if pessoa.id == encontro.facilitador.id %} selected {% endif %}>{{pessoa}}</option>
+          {% endfor %}
+        </optgroup>
+        <optgroup label="Falconi">
+          {% for pessoa in falconis %}
+            <option value="{{pessoa.id}}" {% if pessoa.id == encontro.facilitador.id %} selected {% endif %}>{{pessoa}}</option>
+          {% endfor %}
+        </optgroup>
+        {% comment %} <optgroup label="Outros">
+          {% for pessoa in pessoas %}
+            <option value="{{pessoa.id}}" {% if pessoa.id == encontro.facilitador.id %} selected {% endif %}>{{pessoa}}</option>
+          {% endfor %}
+        </optgroup> {% endcomment %}
+    </select>
+
+  </div>
+  
+  <div class="container">
+    
+    <br><hr><br>
+
+    <label for="projeto">Projeto:</label>
+    <select class="selectpicker" name="projeto" id="projeto" title="Selecione o projeto"
+      data-live-search="true" data-width="75%" data-size="10">
+      <option {% if not encontro %}selected{% endif %} value="0"> -- selecione um projeto -- </option>
+      {% for projeto in projetos %}
+        <option value="{{projeto.id}}"
+        style="font-size: 0.75em;"
+        data-titulo="{{projeto.get_titulo}}"
+        data-organizacao="{{projeto.organizacao}}"
+        data-orientador="{{projeto.orientador}}"
+        {% if projeto.id == encontro.projeto.id %} selected {% endif %}
+        data-subtext="{{projeto.orientador}}"
+        >
+          {{projeto.ano}}.{{projeto.semestre}}
+          ({{projeto.organizacao}})
+          {{projeto.get_titulo}}
+        </option>  
+      {% endfor %}
+    </select><br><br>
+
+    Título: <label id="titulo" name="titulo">
+      {% if encontro and encontro.projeto %}
+        {{encontro.projeto.get_titulo}}
+      {% else %}
+        Titulo de Projeto não definido
       {% endif %}
+    </label><br>
+
+    Organização: <label id="organizacao" name="organizacao">
+      {% if encontro and encontro.projeto and encontro.projeto.organizacao %}
+        {{encontro.projeto.organizacao}}
+      {% else %}
+        Organização Parceira não definida
+      {% endif %}
+    </label><br>
+    
+    Orientador(a): <label id="orientador" name="orientador">
+      {% if encontro and encontro.projeto and encontro.projeto.orientador %}
+        {{encontro.projeto.orientador}}
+      {% else %}
+        Sem identificação de Orientador(a)
+      {% endif %}
+    </label><br>
+
     </div>
 
-    </form>
+    <br><br>
+    <span id="mensagem"></span>
 
-  <script>
+  </div>
+
+  <div class="modal-footer">
+    <button id="fecha_modal" type="button" class="btn btn-secondary mb-1" data-dismiss="modal">Fechar</button>
+
+    <button id="submit" class="btn btn-primary mb-1" type="submit" name="atualizar"
+      {% if encontro %}onclick="operacao = 'atualizar';"{% endif %}>
+      {% if encontro %}Atualizar{% else %}Criar{% endif %}
+    </button>
+    {% if encontro %}
+      <button id="excluir" class="btn btn-primary mb-1" type="submit" name="excluir" onclick="operacao = 'excluir';">
+        Excluir Mentoria
+      </button>
+    {% endif %}
+  </div>
+
+  </form>
+
+<script>
 
 
-    $(document).ready(function () {     
-      $("#projeto").change(function(){
-        var titulo = $(this).children(":selected").data("titulo");
-        var organizacao = $(this).children(":selected").data("organizacao");
-        var orientador = $(this).children(":selected").data("orientador");
-        $("#titulo").text(titulo);
-        $("#organizacao").text(organizacao);
-        $("#orientador").text(orientador);
-      })
-    });
-
-    var operacao = "agendar";
-
-    function carrega_pagina() {}
-    window.onload = carrega_pagina;
-
-    // Atualiza a página quando o popup é aberto
-    $("#popup").on("show.bs.modal", function() {
-      carrega_pagina();
-    });
-
-    
-  $("form#dinamicasform").submit(function(e){
-    e.preventDefault();
-
-    if($("#inicio").val() == $("#fim").val()) {
-      alert("Datas e horários de início e fim são iguais!");
-      return false;
-    }
-
-    d_inicio = new Date($("#inicio").val());
-    d_fim = new Date($("#fim").val());
-    if(d_inicio > d_fim) {
-      alert("Data de início depois da data final!");
-      return false;
-    }
-
-    $.ajaxSetup({
-      headers: { "X-CSRFToken": "{{csrf_token}}" }
-    });
-
-    var form = $("form#dinamicasform").closest("form");
-    var formData = new FormData(form[0]);
-
-    // Adiciona o tipo de operação
-    formData.append(operacao, "true");
-    
-    {% comment %} {% include "load_content.html" %} {% endcomment %}
-
-    $.ajax({
-      type: "POST",
-      url: "{{ url }}",
-      data: formData,
-      processData: false,
-      contentType: false,
-      success: function(response){
-        if (response.atualizado) {
-          $("#submit").hide();
-          $("#excluir").hide();
-          // Atualizar página
-          location.reload();         
-          {% comment %} loadContent( "#atualizar", "{{ root_page_url }}", "#atualizar" ); {% endcomment %}
-        } else {
-          alert(response.mensagem);
-        }
-      },
-      {% include "ajax_error_function.js" %}
-    });
-
-    return false;
-
+  $(document).ready(function () {     
+    $("#projeto").change(function(){
+      var titulo = $(this).children(":selected").data("titulo");
+      var organizacao = $(this).children(":selected").data("organizacao");
+      var orientador = $(this).children(":selected").data("orientador");
+      $("#titulo").text(titulo);
+      $("#organizacao").text(organizacao);
+      $("#orientador").text(orientador);
+    })
   });
 
-  </script>
+  var operacao = "agendar";
+
+  function carrega_pagina() {}
+  window.onload = carrega_pagina;
+
+  // Atualiza a página quando o popup é aberto
+  $("#popup").on("show.bs.modal", function() {
+    carrega_pagina();
+  });
+
+  
+$("form#dinamicasform").submit(function(e){
+  e.preventDefault();
+
+  if($("#inicio").val() == $("#fim").val()) {
+    alert("Datas e horários de início e fim são iguais!");
+    return false;
+  }
+
+  d_inicio = new Date($("#inicio").val());
+  d_fim = new Date($("#fim").val());
+  if(d_inicio > d_fim) {
+    alert("Data de início depois da data final!");
+    return false;
+  }
+
+  $.ajaxSetup({
+    headers: { "X-CSRFToken": "{{csrf_token}}" }
+  });
+
+  var form = $("form#dinamicasform").closest("form");
+  var formData = new FormData(form[0]);
+
+  // Adiciona o tipo de operação
+  formData.append(operacao, "true");
+  
+  {% comment %} {% include "load_content.html" %} {% endcomment %}
+
+  $.ajax({
+    type: "POST",
+    url: "{{ url }}",
+    data: formData,
+    processData: false,
+    contentType: false,
+    success: function(response){
+      if (response.atualizado) {
+        $("#submit").hide();
+        $("#excluir").hide();
+        // Atualizar página
+        location.reload();         
+        {% comment %} loadContent( "#atualizar", "{{ root_page_url }}", "#atualizar" ); {% endcomment %}
+      } else {
+        alert(response.mensagem);
+      }
+    },
+    {% include "ajax_error_function.js" %}
+  });
+
+  return false;
+
+});
+
+</script>
