--- a/projetos/templates/projetos/acompanhamento_view.html
+++ b/projetos/templates/projetos/acompanhamento_view.html
@@ -10,14 +10,13 @@
 
 <style>
   {% comment %} Para seleção de projeto não vazar a tela {% endcomment %}
-  .bootstrap-select > .dropdown-menu { 
+  {% comment %} .bootstrap-select > .dropdown-menu { 
     width: 100vw;
     max-width: fit-content;
-  }
+  } {% endcomment %}
 </style>
 
-<form method="post" enctype="multipart/form-data">
-  {% csrf_token %}
+<form method="post" enctype="multipart/form-data">{% csrf_token %}
 
   <div class="modal-header">
     <h5 id="acompanhamento" class="modal-title">Acompanhamento</h5>    
